  for running the GUI.
- add Objective._generate_generative_mcmc to yield fit curves corresponding
  to MCMC samples.
- add Structure._generate_sld_profile_mcmc to yield sld profiles corresponding
  to MCMC samples.

0.1.34
------
- Fix bug in ManualBeamFinder
- Fix bug in refnx GUI regarding checkbox selection.

0.1.35
------
- only extract requested keys from catalogue
- enable cython3 operations
- change install docs to recommend use of refnx[all]
- update SPZ reduction for new detector translation

0.1.36
------
- rudimentary HDF <-> Data1D interconversion. This is functionality that might
  be subject to change, so the functions are prefixed by "_".
- added TOF simulation to reduction code.
- print out the fitting statistic in a tqdm progress bar.

0.1.37
------
- automated the release to PyPI via Github Actions.
- removed setup.cfg, transferring all information to pyproject.toml.
- fixed various scipy DeprecationWarnings related to keyword only arguments.
- converted various os.path to pathlib.Path
- stopped writing xml output (nobody uses it?)
- added detailed resolution kernel calculation (writes out an HDF file).
  Refactor detailed kernel calculator.
- removed np.asfarray usage, it's deprecated.
- updated emcee vendored code.
- silence RuntimeWarning if the foreground width is found to be wider than
  predicted.
- fix pandas warnings in batchreduction.
- wholesale conversion of os.path to pathlib.Path. Hopefully not too many
  bugs introduced as a result of this.

0.1.38
------
- allow detailed Q resolution kernel to work with q_offset.
- added lopx_hipx to ReductionOptions to allow one to specify the foreground
  region.
- fix path concatenation issue in reduce_stitch, str or Path should be allowed.

0.1.40
------
- remove roadblocks for building wheels for cp312.
- update vendored emcee.
- change str.format to f-strings.

0.1.41
------
- bump minimum Python version to 3.9.
- remove oldest-supported-numpy from list of build requirements.