@@ -1,4 +1,5 @@
 numpy
+numba; python_version != "3.12"
 cython
 scipy
 orsopy
