@@ -57,6 +57,7 @@ all = [
     "pyqt6",
     "qtpy",
     "corner",
+    "numba; python_version != '3.12'",
 ]
 
 test = [
